typo in docs
